force-app/main/default/objects/Tenant__c/fields/Govt_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Govt_Document_Type__c</fullName>
    <label>Govt. Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aadhar Card</fullName>
            </value>
            <value>
                <fullName>PAN Card</fullName>
            </value>
            <value>
                <fullName>Voter Card</fullName>
            </value>
            <value>
                <fullName>Driving License</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>College Id</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>