force-app/main/default/objects/Tenant__c/fields/Govt_Id_Proof_Number__c.field-meta.xml
<CustomField>
    <fullName>Govt_Id_Proof_Number__c</fullName>
    <label>Govt. Id Proof Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>